--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/12/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±30)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of hypothermia, body found by police on shore of the Evros River (GR)</b><br>Source: MNS/PICUM<br>
+Found dead: <b>Feb 12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rexhep Salijaj (man)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>suicide, when his permit to stay in Belgium expired, was to be deported to Kosovo away from son and family</b><br>Source: MNS<br>
 
 <br>
 
