--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/08/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Marius B. (man, 45)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>suicide, hanged himself in detention centre in Nimes (FR) after being held for 15 days without charge</b><br>Source: IRR<br>
+Found dead: <b>12/09/06</b><br>Number of person: <b>250</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>went missing after boat sent SOS signal near Lampedusa (IT)</b><br>Source: ANSA/Unipa<br>
 
 <br>
 
