--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/10/12</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>disappeared after boat from Comoros capsized off coast of Mayotte (FR)</b><br>Source: VOA/UN/IRR<br>
+Found dead: <b>08/12/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mustafa Demir (man, 23)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, suffocated in cargo container travelling to Ireland from Belgium</b><br>Source: AFP/VK/SZ/MET/AP/NCADC/MNS/RTE/KO/MN<br>
 
 <br>
 
