--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jun 06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Dejere Kebede-Tulu (man, 25)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>championship runner found dead in his flat in London (GB); very poor living conditions as possible</b><br>Source: IRR/Telegraph/Independent<br>
+Found dead: <b>22/09/17</b><br>Number of person: <b>37</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>drowned when boat from Kocaeli (TR) to Romania sank in the Black Sea; 40 rescued</b><br>Source: DailySabah/HurriyetDN/ABCNews/IOM Turkey/VK<br>
 
 <br>
 
