--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/01/08</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of starvation on boat carrying 88 migrants to Canary Islands (ES)</b><br>Source: EP/MFS/PICUM/NOB<br>
+Found dead: <b>15/05/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ese Elizabeth Alabi (woman, 29)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died in Papworth Hospital, Cambridge (GB) after being denied a heart transplant due to her nationality, mother of 3</b><br>Source: IRR/BBC<br>
 
 <br>
 
