--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/06/01</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (17 men)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>reportedly drowned while trying to cross from Slovakia to Czech Republic via the Morava River (SK/CZ)</b><br>Source: AP/IRR/Der Standard<br>
+Found dead: <b>10/09/06</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>blown up in minefield in Vyssas near Evros (TR) while crossing Turkish-Greek border</b><br>Source: KI/FE/MNS/FR-BB<br>
 
 <br>
 
