--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/10/07</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N. (1 child)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck, bodies found by coast guard near Vendicari, Sicily (IT)</b><br>Source: LR/MNS/PICUM/MUGAK/AVUI<br>
+Found dead: <b>16/03/98</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>disappeared in the Strait of Gibraltar after Moroccan ship sank</b><br>Source: PUB<br>
 
 <br>
 
