--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2002</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned while trying to cross Iranian-Turkish border near Örtülü (TR)</b><br>Source: HRFT<br>
+Found dead: <b>02/05/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaways, found dead in Scicli (IT) after reportedly being thrown overboard</b><br>Source: GiulianoNewsChronicle<br>
 
 <br>
 
