--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/11/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>S.G. (man)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>killed in a clash between migrant groups in Belgrade (RS)</b><br>Source: Tanjug<br>
+Found dead: <b>20/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nassur Said Mhadji "DJ Silva" (man)</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>missing after boat sank on way from Anjouan (KM) to Mayotte (FR)</b><br>Source: HabComores<br>
 
 <br>
 
