--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/08/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Todor Bogdanovic (boy, 8)</b><br>Region of origin: <b>Yugoslavia (Roma)</b><br>Cause of death: <b>shot by French police on mountain pass while entering from Italy</b><br>Source: Reu./AP/AFP/VK/ST/IHFHR<br>
+Found dead: <b>27/09/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zelimkhan Isakov (man, 35)</b><br>Region of origin: <b>Chechnya</b><br>Cause of death: <b>suffered fatal heart attack in deportation centre in Vienna (AT) after being refused treatment</b><br>Source: IRR/DerStandard<br>
 
 <br>
 
