--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/09/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zelimkhan Isakov (man, 35)</b><br>Region of origin: <b>Chechnya</b><br>Cause of death: <b>suffered fatal heart attack in deportation centre in Vienna (AT) after being refused treatment</b><br>Source: IRR/DerStandard<br>
+Found dead: <b>23/04/15</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N. (±25)</b><br>Region of origin: <b>Somalia, Afghanistan</b><br>Cause of death: <b>killed by train near Veles (MK) while walking on narrow mountain pass to Hungary</b><br>Source: VK/MNS/ZEIT<br>
 
 <br>
 
