--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/10/08</b><br>Number of person: <b>23</b><br>Name, gender, age: <b>N.N. (1 woman; 1 man)</b><br>Region of origin: <b>Zimbabwe</b><br>Cause of death: <b>3 drowned after boat sank from Anjouan (KM) to Mayotte (FR); 20 missing</b><br>Source: Malango<br>
+Found dead: <b>09/07/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Gabriel Juliao Mavonda (man, 21)</b><br>Region of origin: <b>Angola</b><br>Cause of death: <b>jumped off scaffolding on building in Berlin (DE) out of fear of deportation</b><br>Source: taz/ZAG<br>
 
 <br>
 
