--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/04/99</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (4 children; 8 adults)</b><br>Region of origin: <b>Pakistan, Afghanistan</b><br>Cause of death: <b>reportedly drowned in the Tisza River while trying to cross Ukrainian-Hungarian border</b><br>Source: taz/AFP/IRR/INexile<br>
+Found dead: <b>04/03/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 19)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stabbed to death in fight in refugee hostel in Lindesberg (SE)</b><br>Source: AFP/DailyStar<br>
 
 <br>
 
