--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/03/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Emin Acar (boy, 17)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>presumed dead, disappeared after being deported from Stuttgart (DE) to Turkey</b><br>Source: ARI<br>
+Found dead: <b>27/11/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hemen Mahmood Faqia (man, 40)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>drowned in Tyne River (GB) after agreeing to voluntary repatriation</b><br>Source: IRR<br>
 
 <br>
 
