--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/02/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border guards at unspecified location while trying to cross Syrian-Turkish border</b><br>Source: SOHR<br>
+Found dead: <b>25/07/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Muhammed Wisam Sankari (man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>decapitated in Istanbul (TR) after being kidnapped and raped for being gay</b><br>Source: Libération/KaosGL<br>
 
 <br>
 
