--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/11/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mahamadou Maréga (man, 38)</b><br>Region of origin: <b>Mali</b><br>Cause of death: <b>died from shock after police in Colombes (FR) used taser on him to stop a fight</b><br>Source: Europe1/MNS/Parisen<br>
+Found dead: <b>05/07/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±25)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned, body found near Selinunte, Trapani (IT) in advanced state of decomposition</b><br>Source: ANSA/FE<br>
 
 <br>
 
