--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ebune Christian Ecole (man, 31)</b><br>Region of origin: <b>Cameroon</b><br>Cause of death: <b>died of heart failure, beaten by police during violent deportation from Budapest International Airport (HU)</b><br>Source: Reu./UNHCR/MNS/MGHR/IRR/MUGAK/NCADC<br>
+Found dead: <b>03/05/15</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found by rescue teams in and around various boats off coast of Libya</b><br>Source: USA Today/IBT<br>
 
 <br>
 
