--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/05/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Khouyi Mbarek (boy, 13)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaways, found dead in Scicli (IT) after reportedly being thrown overboard</b><br>Source: GiulianoNewsChronicle<br>
+Found dead: <b>31/12/98</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after boat sank in the Aegean Sea near Greece</b><br>Source: AFP/MNS<br>
 
 <br>
 
