--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/12/98</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after boat sank in the Aegean Sea near Greece</b><br>Source: AFP/MNS<br>
+Found dead: <b>25/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Amor Knis (man, 25)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>stowaway, body found in trunk of girlfriend’s car in Genoa (IT) after 30 hour trip from Tunisia</b><br>Source: RAI/ANSA/ILM<br>
 
 <br>
 
