--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/06/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Neisse River near Lodenau (DE) close to Polish-German border</b><br>Source: FFM/ZAG<br>
+Found dead: <b>Mar 08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Omar (man, 24)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>went missing after leaving village of Bethioua (DZ) and trying to cross the sea to reach Spain</b><br>Source: QUOTI/NOB<br>
 
 <br>
 
