--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/09/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 32)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>reportedly drowned, found at border between Playa de la Hípica (ES) and Beni Ensar (MA)</b><br>Source: APDHA<br>
+Found dead: <b>26/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead in boat drifting in the Mediterranean Sea; NGO had to wait hours for rescue permission from Italy</b><br>Source: SOSMed<br>
 
 <br>
 
