--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/04/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaways, found dead in trailer of truck at the port of Almería (ES)</b><br>Source: AFP/EP<br>
+Found dead: <b>20/05/08</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>2 found, reportedly drowned off coast of Malta; 10 missing</b><br>Source: NOB/TimesM<br>
 
 <br>
 
