--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Apr 03</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found on coast of Lanzarote (ES)</b><br>Source: SOS<br>
+Found dead: <b>04/11/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Robiel (man)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>found floating in water near Port of Calais (FR) after trying to swim to Great Britain</b><br>Source: CMS<br>
 
 <br>
 
