--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/08/12</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa, Bangladesh</b><br>Cause of death: <b>drowned, bodies found after vessel from Tripoli (LY) capsized off coast of Libya</b><br>Source: MNS/FE<br>
+Found dead: <b>31/07/08</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (2 women; 1 man)</b><br>Region of origin: <b>Africa, Iraq</b><br>Cause of death: <b>drowned, bodies found at sea during rescue operation by armed forces between Malta and Libya</b><br>Source: NOB/TimesM<br>
 
 <br>
 
