--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/01/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Najaat Alrikabi (boy, 5 months)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died after being refused medical treatment at detention centre in Leusden (NL)</b><br>Source: NRC<br>
+Found dead: <b>12/02/11</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died on boat travelling to Italy, found by coast guards near Sfax (TN)</b><br>Source: LR<br>
 
 <br>
 
