--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/10/16</b><br>Number of person: <b>29</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>suffocated or drowned on dinghy flooded with fuel and seawater off Libyan shore</b><br>Source: AFP/Aljazeera<br>
+Found dead: <b>02/03/12</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men, ±22)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>bodies with life jackets found in the sea near the Bay of Melilla (ES)</b><br>Source: MUGAK/Raz/Diario de Noticias/ElDia/SUR/VDG<br>
 
 <br>
 
