--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/08/12</b><br>Number of person: <b>32</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa, Bangladesh</b><br>Cause of death: <b>missing, reportedly drowned after vessel from Tripoli (LY) capsized off coast of Libya</b><br>Source: MNS/ICR/Ansamed<br>
+Found dead: <b>06/07/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child, 6)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned after boat capsized off coast of Tripoli (LY)</b><br>Source: UNHCR<br>
 
 <br>
 
